# COMP4411-Impressionist

./:  - 複製.gitignore  .gitignore  AlphaMapBrush.cpp  AlphaMapBrush.h  Bayesian.cpp  Bayesian.h  Bitmap.cpp  Bitmap.h  BlurringBrush.cpp  BlurringBrush.h  BrushStroke.cpp  BrushStroke.h  CMakeLists.txt  CurveBrush.cpp  CurveBrush.h  GlobalFunction.cpp  GlobalFunction.h  ImageCursor.cpp  ImageCursor.h  ImpBrush.cpp  ImpBrush.h  Impressionist.cpp  Impressionist.h  ImpressionistDoc.cpp  ImpressionistDoc.h  ImpressionistUI.cpp  ImpressionistUI.h  Impressionist_BW_Checklist.txt  KernelBrush.cpp  KernelBrush.h  MosaicPainting.cpp  MosaicPainting.h  OriginalView.cpp  OriginalView.h  PaintView.cpp  PaintView.h  PointBrush.cpp  PointBrush.h  README.md  SharpeningBrush.cpp  (+25 more)
enc_temp_folder/1cc18a215c7033a465703a5ff3abf390/: PaintView.cpp
enc_temp_folder/791a66db3463e4a99d685d1d20cc6d84/: ImageCursor.cpp
enc_temp_folder/804549ad16da7ff4799159f59cdd37/: CurveBrush.cpp
image_pool/: Thumbs.db
images/: Thumbs.db
